--- a/src/main/resources/com/example/plantwidget_g18_gui/LegendaryMenu.fxml
+++ b/src/main/resources/com/example/plantwidget_g18_gui/LegendaryMenu.fxml
@@ -1,40 +1,68 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.effect.ColorAdjust?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #4e835b;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.plantwidget_g18_gui.HelloController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #4e835b;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.plantwidget_g18_gui.HelloController">
    <children>
-      <ScrollPane fx:id="legendaryScrollPane" hbarPolicy="NEVER" layoutY="72.0" prefHeight="328.0" prefWidth="600.0">
-         <content>
-            <GridPane fx:id="legendaryGridPane" alignment="TOP_CENTER" maxWidth="-Infinity" prefWidth="590.0" vgap="50.0">
-              <columnConstraints>
-                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                  <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints maxHeight="-Infinity" vgrow="SOMETIMES" />
-                  <RowConstraints maxHeight="-Infinity" vgrow="SOMETIMES" />
-              </rowConstraints>
-            </GridPane>
-         </content>
-      </ScrollPane>
-      <Button layoutX="479.0" layoutY="15.0" mnemonicParsing="false" onAction="#goBackToLibrary" text="Go Back">
-         <font>
-            <Font name="Verdana Pro Cond Black" size="21.0" />
-         </font>
-      </Button>
       <Label layoutX="182.0" layoutY="16.0" text="Legendary Plants">
          <font>
             <Font name="Verdana Pro Cond Black" size="29.0" />
          </font>
       </Label>
+      <Button fx:id="exitButton1" layoutX="565.0" mnemonicParsing="false" onAction="#closeProgram" prefHeight="15.0" prefWidth="33.0" styleClass="buttonExit" stylesheets="@cssSheets.css" text="X" textOverrun="CLIP">
+         <effect>
+            <DropShadow blurType="GAUSSIAN">
+               <color>
+                  <Color red="1.0" />
+               </color>
+            </DropShadow>
+         </effect>
+         <font>
+            <Font name="System Bold Italic" size="12.0" />
+         </font>
+      </Button>
+      <StackPane layoutY="65.0" prefHeight="336.0" prefWidth="600.0">
+         <children>
+            <ScrollPane fx:id="legendaryScrollPane" hbarPolicy="NEVER" maxWidth="-Infinity" prefHeight="328.0" prefWidth="600.0" style="-fx-background-color: #81d896;">
+               <content>
+                  <GridPane fx:id="legendaryGridPane" alignment="TOP_CENTER" maxWidth="-Infinity" prefHeight="100.0" prefWidth="600.0" style="-fx-background-color: #81d896;" vgap="50.0">
+                    <columnConstraints>
+                      <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                      <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints maxHeight="-Infinity" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="-Infinity" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="-Infinity" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <padding>
+                        <Insets top="20.0" />
+                     </padding>
+                  </GridPane>
+               </content>
+            </ScrollPane>
+         </children>
+      </StackPane>
+      <Button alignment="BOTTOM_RIGHT" graphicTextGap="2.0" layoutX="458.0" layoutY="15.0" mnemonicParsing="false" onAction="#goBackToLibrary" style="-fx-background-color: #81d896;" text="Go Back">
+         <font>
+            <Font name="Verdana Pro Cond Black" size="21.0" />
+         </font>
+         <effect>
+            <ColorAdjust brightness="-0.09" contrast="0.03" />
+         </effect>
+      </Button>
    </children>
 </AnchorPane>
